# tanmatsu-ssh

./: CMakeLists.txt  Makefile  README.md  mch2022_button_symbols.txt
main/: CMakeLists.txt  app_management.c  app_management.h  app_metadata_parser.c  app_metadata_parser.h  coprocessor_management.c  http_download.c  idf_component.yml  main.c  repository_client.c  util_ssh.c
main/hardware_test/: test_keyboard.c  test_keyboard.h  test_keyboard_stuck_keys.c  test_keyboard_stuck_keys.h
main/menu/: about.h  home.c  menu_brightness.h  menu_hardware_test.h  menu_rftest.h  menu_settings.c  menu_ssh.c  menu_ssh_edit.c  message_dialog.c  nametag.c  settings_repository.h  settings_ssh.c  terminal.c  util_ssh.c
sdkconfigs/: tanmatsu
